--- a/app/page.css
+++ b/app/page.css
@@ -1,3 +1,6 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 .container {
   min-height: 100vh;
@@ -26,7 +29,7 @@
 }
 
 .container.dark .header {
-    border-bottom: 1px solid #2f3035;
+  border-bottom: 1px solid #2f3035;
 }
 
 .logo {
@@ -40,7 +43,8 @@
   padding-right: 1rem;
 }
 
-.docs-button, .get-started {
+.docs-button,
+.get-started {
   padding: 10px 20px;
   border-radius: 12px;
   border: none;
@@ -66,11 +70,11 @@
 }
 
 .modal {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
 }
 
 .footer-image {
