--- a/app/globals.css
+++ b/app/globals.css
@@ -39,11 +39,11 @@ a {
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
-}
+} */
 
 @layer base {
   :root {
