--- a/app/page.css
+++ b/app/page.css
@@ -8,19 +8,19 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background: #f1f1f3;
-  color: #333;
+  /* background: #f1f1f3;
+  color: #333; */
   transition: background-color 0.3s, color 0.3s;
 }
-
-.container.dark {
+*/ .container.dark {
   background: #0c0e14;
   color: #fff;
 }
 
 .header {
   position: absolute;
-  top: 0;
+  top: 2;
+  left: 10;
   display: flex;
   align-items: center;
   justify-content: space-between;
