--- a/app/page.css
+++ b/app/page.css
@@ -12,7 +12,7 @@
   color: #333; */
   transition: background-color 0.3s, color 0.3s;
 }
-*/ .container.dark {
+.container.dark {
   background: #0c0e14;
   color: #fff;
 }
